--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -1,7 +1,7 @@
 {% extends 'todos/base.html' %}
 
 {% block title %}
-<title>Todo list</title>
+<title>Task Management</title>
 {% endblock %}
 
 {% block content %}
@@ -12,7 +12,7 @@
     <div class="offset-md-2 col-lg-9">
       <div class="page-header">
         <h1>
-           yoyo's Todo List 
+          Task Management App
         </h1>
       </div>
     </div>
